--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-toastify": "^4.1.0"
   }
 }
