--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react": "18.2.36",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.0",
     "eslint": "8.53.0",
     "eslint-config-next": "14.0.1",
+    "js-cookie": "^3.0.5",
     "next": "14.0.1",
     "postcss": "8.4.31",
     "react": "18.2.0",
@@ -25,6 +27,8 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react-toastify": "^4.1.0"
   }
 }
