--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.5",
     "typescript": "5.2.2"
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/react-loader-spinner": "^4.0.0",
     "@types/react-toastify": "^4.1.0"
   }
 }
